--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Presentation</string>
+    <string name="sku_id">SKU ID:</string>
+    <string name="currency">Currency:</string>
+    <string name="total">TOTAL:</string>
 </resources>
